<?xml version="1.0"?>
<package>
  <name>thormang3_action_editor</name>
  <version>0.0.0</version>
  <description>
    The thormang3_action_editor package
    This package is a action editor for thormang3.
    The action file which is edited by this editor will be used with this action editor.
  </description>
  <license>BSD</license>
  <author email="hjsong@robotis.com">Jay</author>
  <maintainer email="hjsong@robotis.com">Jay</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_controller</build_depend>  
  <build_depend>thormang3_action_module</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_controller</run_depend>
  <run_depend>thormang3_action_module</run_depend>

</package>