<?xml version="1.0"?>
<package>
  <name>thormang3_action_editor</name>
  <version>0.1.2</version>
  <description>
    The thormang3_action_editor package
    This package is a action editor for thormang3.
    The action file which is edited by this editor will be used with this action editor.
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="hjsong@robotis.com">Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Tools/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Tools</url>
  <url type="website">http://wiki.ros.org/thormang3_action_editor</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>thormang3_action_module</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libncurses-dev</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_controller</run_depend>
  <run_depend>thormang3_action_module</run_depend>
</package>
