<?xml version="1.0"?>
<package>
  <name>thormang3_offset_tuner_server</name>
  <version>0.1.0</version>
  <description>
    The joint offset can be tuned by this package.
    It is used with the thormang3_offset_tuner_client.
  </description>
  <license>BSD</license>
  <author email="hjsong@robotis.com">Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Tools/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-Tools</url>
  <url type="website">http://wiki.ros.org/thormang3_tools</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>thormang3_base_module</build_depend>
  <build_depend>thormang3_offset_tuner_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
