<?xml version="1.0"?>
<package>
  <name>thormang3_offset_tuner_server</name>
  <version>0.0.0</version>
  <description>The offset_tuner_server package</description>

  <maintainer email="hjsong@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_controller</build_depend>  
  <build_depend>thormang3_base_module</build_depend>  
  <build_depend>thormang3_offset_tuner_msgs</build_depend>
  <build_depend>robotis_controller</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>cmake_modules</run_depend>

</package>
